--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ data-theme="light">
                     <i class="fa-brands fa-twitter text-blue-500 text-[20px] p-3"></i>
                 </div>
                 <div class="facebook-logo  border-2 rounded-full border-gray-300 text-center ">
-                    <i class="fa-brands fa-facebook-f text-blue-800 text-[20px] py-3 px-4"></i>
+                    <i class="fa-brands fa-facebook-f  text-[20px] py-3 px-4"></i>
                 </div>
                 <div>
                     <button class="signIn">Sign In</button>
