footer part added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ data-theme="light">
     <!-- Link js -->
     <script src="./sources/js/index.js"></script>
 </head>
-<body class="bg-gray-100 h-[100vh]"> 
+<body class="bg-gray-100"> 
     <header class="mx-[100px] pt-[30px]">
         <nav class="flex justify-between items-center">
             <div class="flex gap-4 items-center">
@@ -57,7 +57,7 @@ data-theme="light">
         </nav>
     </header>
     <main class="mx-[100px] pt-[30px]">
-        <div class="categories-container rounded-lg bg-white h-[60px] flex items-center justify-center gap-12 pb-[25px] pt-[5px] ">
+        <div class="categories-container shadow-xl rounded-lg bg-white h-[60px] flex items-center justify-center gap-12 pb-[25px] pt-[5px] ">
             <button class="category flex flex-col items-center active" onclick="toggleActive(this)">
             <a href="#">
                 <i class="fa-solid fa-caret-down text-orange-400 text-[14px] text-white"></i>
@@ -83,8 +83,145 @@ data-theme="light">
             </a>
             </button>
         </div>
+        <div class=" h-[500px] bg-white shadow-xl mt-[100px]">
+            <h1 class="flex justify-center items-center my-auto text-[100px]">Main section to be done!</h1>
+        </div>
     </main>
     <footer>
+        <div class="footer-logo-part flex justify-between items-center px-[40px] py-[30px] shadow-[0_35px_60px_-15px_rgba(0,0,0,0.3)] rounded-lg mx-[100px] mt-[40px]">
+            <div>
+                <img src="./sources/images/logo.png" alt="">
+            </div>
+            <div class="flex items-center justify-center">
+                <div class="pr-6">
+                    <img src="./sources/images/thik_logo.png" alt="">
+                </div>
+                <div>
+                    <ol class="text-gray-600">
+                        <li>*All transactions are protected by SSL 256-bit encryption.</li>
+                        <li>*Protecting Your Account with Multifactor Authentication.</li>
+                        <li>*Unique multiple layers of Fraud Detection systems.</li>
+                    </ol>
+                </div>
+            </div>
+            <div>
+                <button class="gray-border-btn border-2 border-gray-300 py-3 px-6 rounded-lg text-[14px] text-gray-500 hover:text-gray-600 hover:bg-gray-300 ease-in duration-200 font-medium hover:border-gray-400">Find out more...</button>
+            </div>
+        </div>
+        <div class="footer-main mt-[100px] bg-[orange] mx-[100px] px-[45px] py-[41px] flex flex-col">
+            <div class="footer-main-1 flex">
+                <div class="w-1/5">
+                    <div class="trustpilot flex gap-[5px]">
+                        <i class="fa-solid fa-star text-[green] text-[40px]"></i>
+                        <h1 class="text-[30px] text-white">Trustpilot</h1>
+                    </div>
+                    <div class="rating-star flex gap-1 mt-2">
+                        <div class="bg-[green] p-1 w-[40px] flex justify-center items-center">
+                            <i class="fa-solid fa-star text-gray-200 text-[30px]"></i>
+                        </div>
+                        <div class="bg-[green] p-1 w-[40px] flex justify-center items-center">
+                            <i class="fa-solid fa-star text-gray-200 text-[30px]"></i>
+                        </div>
+                        <div class="bg-[green] p-1 w-[40px] flex justify-center items-center">
+                            <i class="fa-solid fa-star text-gray-200 text-[30px]"></i>
+                        </div>
+                        <div class="bg-[green] p-1 w-[40px] flex justify-center items-center">
+                            <i class="fa-solid fa-star text-gray-200 text-[30px]"></i>
+                        </div>
+                        <div class="bg-[green] p-1 w-[40px] flex justify-center items-center">
+                            <i class="fa-solid fa-star text-gray-200 text-[30px]"></i>
+                        </div>
+                    </div>
+                    <div class="flex mt-2">
+                        <div class="w-[55%] border-r-2 border-white text-white text-[14px]">
+                            <p>TrustpilotScore 4.7</p>
+                        </div>
+                        <div class="w-[40%] flex justify-end text-white text-[14px]">
+                            <p>See our <span class="font-bold">129</span></p>
+                        </div>
+                    </div>
+                    <div class="footer-logos flex flex-col gap-2 mt-8">
+                        <img class="rounded-lg w-[60%]" src="./sources/images/footer logo/bestchange.png" alt="">
+                        <div class="flex gap-2">
+                            <img class="rounded-lg w-[30%]" src="./sources/images/footer logo/emon.png" alt="">
+                            <img class="rounded-lg w-[30%]" src="./sources/images/footer logo/bits.png" alt="">
+                        </div>
+                        <img class="rounded-lg w-[70%]" src="./sources/images/footer logo/pro-obmen.png" alt="">
+                    </div>
+                    <div class="footer-icons mt-12 flex gap-4">
+                        <i class="fa-brands fa-square-twitter text-white text-[40px]"></i>
+                        <i class="fa-brands fa-square-facebook text-white text-[40px]"></i>
+                    </div>
+                </div>
+                <div class="w-4/5 flex justify-end gap-[20px] pl-[auto]">
+                    <div class="footer-company">
+                        <h1 class="text-white text-[21px] font-bold">
+                            Company
+                        </h1>
+                        <ul>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">About Us</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Contact Us</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">News</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Can i trust XMLgold?</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Payment Systems</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Partners</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Video Tutorials</span></li>
+                        </ul>
+                    </div>
+                    <div class="footer-legal">
+                        <h1 class="text-white text-[21px] font-bold">
+                            Legal
+                        </h1>
+                        <ul>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Privacy Policy</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Cookie Policy</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">AML Policy</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">AML/CTF and KYC Policy</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Terms and Conditions</span></li>
+                        </ul>
+                    </div>
+                    <div class="footer-company">
+                        <h1 class="text-white text-[21px] font-bold" >
+                            Buy
+                        </h1>
+                        <ul>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Buy AdvCash EUR</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Buy AdvCash USD</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Buy Bitcoin</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Buy Litecoin</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Buy Payeer EUR</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Buy Payeer USD</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Buy Perfect Money EUR</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Buy Perfect Money USD</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Buy PM e-Voucher USD</span></li>
+                            <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Buy Tether TRC20 (USDT)</span></li>
+                        </ul>
+                    </div>
+                    <div class="footer-company">
+                        <h1 class="text-white text-[21px] font-bold" >
+                            Sell
+                        </h1>
+                        <ul>
+                                <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Sell AdvCash EUR</span></li>
+                                <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Sell AdvCash USD</span></li>
+                                <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Sell Bitcoin</span></li>
+                                <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Sell Litecoin</span></li>
+                                <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Sell Payeer EUR</span></li>
+                                <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Sell Payeer USD</span></li>
+                                <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Sell Perfect Money EUR</span></li>
+                                <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Sell Perfect Money USD</span></li>
+                                <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Sell PM e-Voucher USD</span></li>
+                                <li><a href=""><span class="text-white text-[14px] border-orange-400 hover:border-b-2 border-white">Sell Tether TRC20 (USDT)</span></li>
+                        </ul>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="footer-main-2 flex mt-4 justify-center">
+                <p class="text-white text-[14px]">© 2006-2023 XMLGold</p>
+            </div>
+            
+        </div>
     </footer>
 
     <script>
