--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ data-theme="light">
                 <button class="gray-border-btn border-2 border-gray-300 py-3 px-6 rounded-lg text-[14px] text-gray-500 hover:text-gray-600 hover:bg-gray-300 ease-in duration-200 font-medium hover:border-gray-400">Find out more...</button>
             </div>
         </div>
-        <div class="footer-main mt-[100px] bg-[orange] mx-[100px] px-[45px] py-[41px] flex flex-col">
+        <div class="footer-main mt-[100px] bg-[orange] mx-[100px] px-[45px] py-[41px] flex flex-col rounded-lg">
             <div class="footer-main-1 flex">
                 <div class="w-1/5">
                     <div class="trustpilot flex gap-[5px]">
